--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,19 @@
 language: node_js
+
+branches: 
+  only: 
+    - master
+
+cache:
+  directories:
+    - $HOME/.npm
+    - $HOME/.yarn-cache
+
 node_js:
   - 6
+
 script: 
   - npm run ci
+  
 after_success:
   - npm run coveralls
