--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spm-loader",
   "version": "1.0.5",
-  "description": "",
+  "description": "auto create traceless goldlog",
   "main": "index.js",
   "repository": {
     "type": "git",
